-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
3
-
9223372036854775807
Sequence can't be changed or overflowed in case of IDIF.
Thus don't tigger kernel panic for below case:
last_created [0x100000001:0x15:0x0], next_fid [0x100000000:0xfffffff6:0x0]
The same assertion that excepts IDIFs exists in osp_fid_diff.
- is related to
-
LU-9547 LBUG osp_dev.c:755:osp_statfs()) ASSERTION( sfs->os_fprecreated <= OST_MAX_PRECREATE * 2 ) failed
-
- Resolved
-